clusters/homelab-1/.network-policies/allow-ingress-from-private/destination/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-from-private
spec:
  podSelector:
    matchLabels:
      networking/allow-ingress-from-private: "true"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 192.168.0.0/16
        - ipBlock:
            cidr: 10.0.0.0/8
        - ipBlock:
            cidr: 172.16.0.0/12
